property type front end functionalities
